2014-09-24  correct time stamp for 4.6.6 in version.c

2014-09-21  Release 4.6.6  (cvs tag Release_4_6_6)

2014-09-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/mouse.c (xDateTimeFormat):  Use gnuplot's own ggmtime() instead
	of gmtime() to avoid platform dependant restrictions. Revert last change
	since it's now unnecessary. Fixes display of dates before 1970 and after
	2038 in the status bar on Windows.
	Bug #1470

2014-09-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/mouse.c (xDateTimeFormat):  gmtime() might return NULL for
	invalid arguments.
	Bug #1470

2014-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (update):  Revert to same code as in 4.6.5.
	Fixes regression that caused "update foo" to fail on linux if foo was
	not in the current directory.
	See bug #1385

2014-09-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Backport two sanity checks from v5.
	May prevent failures reported on OSX due to overlapping strcpy range.
	Bug #1336

2014-09-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse parse_colorspec):  Add forward-compatibility
	with v5 syntax that makes "rgb" optional in lc|fc {rgb} "colorname".

2014-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c:  Handle columnheaders in input to "fit".
	Bug #1467

2014-08-14 Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_rectangle) src/graph3d.c (map3d_position_r):
	Fix y extent and clipping of rectangles with negative y coord or
	inverted axes.
	Bug #1462

2014-08-01 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress):  Trap mouse button click on
	press rather than on release so that "pause mouse {button1|any}"
	takes precedence over a key binding to the mouse button.
	Bugfix

2014-07-31 Ethan A Merritt  <merritt@u.washington.edu>

	* src/syscfg.h:  Revert most of the 2014-07-28 patch with the hope
	of correcting a build problem for bf_test.  All that is left of the