@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.255.2.29 2014/01/31 05:22:06 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.255.2.30 2014/06/18 00:05:58 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -562,10 +562,13 @@ get_data(struct curve_points *current_plot)
 
     /* EXPERIMENTAL May 2013 - Treating timedata columns as strings allows */
     /* functions column(N) and column("HEADER") to work on time data.	   */
-    if (axis_array[current_plot->x_axis].datatype == DT_TIMEDATE)
-	expect_string(1);
-    if (axis_array[current_plot->y_axis].datatype == DT_TIMEDATE)
-	expect_string(2);
+    /* Sep 2014: But the column count is wrong for HISTOGRAMS */
+    if (current_plot->plot_style != HISTOGRAMS) {
+	if (axis_array[current_plot->x_axis].datatype == DT_TIMEDATE)
+	    expect_string(1);
+	if (axis_array[current_plot->y_axis].datatype == DT_TIMEDATE)
+	    expect_string(2);
+    }
 
     if (df_no_use_specs > max_cols)
 	int_error(NO_CARET, "Too many using specs for this style");
